tests/paczka1/fuzzy1/74485571.err
Error in line 9: GQTZHX A611 65,7
Error in line 15: GQTZHX S247 53,9
Error in line 18: GQTZHX A878 32,1
Error in line 7: ZRTyj2 A611 54,2
Error in line 33: A611 S247 20,0
Error in line 35: A611 S1 55,4
